--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,7 +1,7 @@
 name: generate animation
 
 on:
-  # run automatically every 2 hours
+  # run automatically every 3 hours
   schedule:
     - cron: "0 */3 * * *" 
   
@@ -11,15 +11,15 @@ on:
   # run on every push on the master branch
   push:
     branches:
-    - master
+    - main
+    
+  
 
 jobs:
   generate:
-    permissions: 
-      contents: write
     runs-on: ubuntu-latest
-    timeout-minutes: 5
-  
+    timeout-minutes: 10
+    
     steps:
       # generates a snake game from a github user (<github_user_name>) contributions graph, output a svg animation at <svg_out_path>
       - name: generate github-contribution-grid-snake.svg
@@ -29,8 +29,10 @@ jobs:
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
-  
-  
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          
+          
       # push the content of <build_dir> to a branch
       # the content will be available at https://raw.githubusercontent.com/<github_user>/<repository>/<target_branch>/<file> , or as github page
       - name: push github-contribution-grid-snake.svg to the output branch
